force-app/main/default/objects/Bank_Transactions__c/Bank_Transactions__c.object-meta.xml
<CustomObject>
    <description>Bank transactions</description>
    <label>Bank Transactions</label>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>Bank Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>