force-app/main/default/objects/Bank_Transactions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>